# filter_lattice

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  simple_test.py  test_filter_lattice.py
.github/workflows/: python-package.yml
filter_lattice/: __init__.py  filters.py  lattice.py  utils.py
notebooks/: API.ipynb  README.md  biquad_example.ipynb
tests/: simple_test.py  test_filter_lattice.py
